# Vual

./: .gitignore  LICENSE  README.md  pyproject.toml  vual
data/: io.github.vual.desktop  io.github.vual.metainfo.xml
po/: compile.py  en.po  ru.po  vual.pot
src/vual/: __init__.py  __main__.py  app.py  cheatengine.py  config.py  i18n.py  protonhax.py  steam.py  tables.py  window.py  wine_theme.py
src/vual/data/: style.css
src/vual/locale/en/LC_MESSAGES/: vual.mo
src/vual/locale/ru/LC_MESSAGES/: vual.mo
src/vual/ui/: __init__.py  covers.py  game_tile.py  guide_page.py  main_page.py  pref_appearance.py  pref_ce.py  pref_steam.py  preferences.py
